--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
 @charset "utf-8";
 @import url("font.css");
 @import url("normalize.css");
+/* 스타일 초기화 */
+html, body, h1, h2, h3, h4, h5, h6, p{
 
-/* box-sizing 기본 값 선언 */
-*, *::before, *::after{
-  box-sizing: border-box;
+  border: 0;
+  padding: 0;
+  margin: 0; 
+}
+html{
+  font-size: 10px;
+
+}
+body{
+  font-size: 1.6rem  
+}
+h1, h2, h3, h4, h5, h6{
+  font-size: 1em;
+  font-weight: normal;
+  
 }
